abstract class TreeType {
  void draw(int x, int y);
}